experimental/ir/testdata/options/values/nested.proto.stderr.txt
error: expected singular message, found repeated `buf.test.Foo`
  --> testdata/options/values/nested.proto:25:14
   |
25 | option (x).b.a = {};
   |            - ^ field selector requires singular message
   |            |
   |            found repeated `buf.test.Foo`
...
43 |     optional Foo a = 1;
44 |     repeated Foo b = 2;
   |     ------------ type specified here

error: message field `buf.test.Foo.a` set multiple times
  --> testdata/options/values/nested.proto:28:8
   |
27 | option (x).a.a = {};
   |        ----- first set here...
28 | option (x).a = {};
   |        ^^^^^ ... also set here
29 | option (x).a.a.a = {};
...
43 |     optional Foo a = 1;
   |                  - not a repeated field
   |
   = note: a non-`repeated` option may be set at most once

error: message extension `buf.test.y` set multiple times
  --> testdata/options/values/nested.proto:32:8
   |
31 | option (x).(y).a = {};
   |        ------- first set here...
32 | option (x).(y) = {};
   |        ^^^^^^^ ... also set here
33 | option (x).(y).a.(y) = {};
...
53 |     optional Foo y = 1000;
   |                  - not a repeated field
   |
   = note: a non-`repeated` option may be set at most once

error: expected singular message, found repeated `buf.test.Foo`
  --> testdata/options/values/nested.proto:38:18
   |
38 | option (x).a.(z).a = {};
   |              --- ^ field selector requires singular message
   |              |
   |              found repeated `buf.test.Foo`
39 | option (x).a.(z) = {};
...
53 |     optional Foo y = 1000;
54 |     repeated Foo z = 1001;
   |     ------------ type specified here

encountered 4 errors
